UriComponents formats Collection query param URI var
Closes gh-34311